--- a/Basique7.13AppFlutter/android/app/build.gradle
+++ b/Basique7.13AppFlutter/android/app/build.gradle
@@ -43,7 +43,7 @@ android {
     }
 
     defaultConfig {
-        applicationId "com.basique.app"
+        applicationId "com.basique.play"
         minSdkVersion 21
         targetSdkVersion 34
         multiDexEnabled true
