--- a/Basique7.13AppFlutter/android/app/src/debug/AndroidManifest.xml
+++ b/Basique7.13AppFlutter/android/app/src/debug/AndroidManifest.xml
@@ -1,4 +1,4 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.basique.app">
+    package="com.basique.play">
     <uses-permission android:name="android.permission.INTERNET"/>
 </manifest>
