--- a/Basique7.13AppFlutter/android/app/src/main/AndroidManifest.xml
+++ b/Basique7.13AppFlutter/android/app/src/main/AndroidManifest.xml
@@ -1,4 +1,4 @@
-<manifest xmlns:android="http://schemas.android.com/apk/res/android" package="com.basique.app">
+<manifest xmlns:android="http://schemas.android.com/apk/res/android" package="com.basique.play">
   <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION"/>
   <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION"/>
   <uses-permission android:name="android.permission.FOREGROUND_SERVICE"/>
